More clean shutdown via ctrl+c